--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             co tylko dla mnie świeci<br>
             Niech w tle naszych uczuć<br>
             słychać tylko dzieci</p><br>
+            <p>wybrane wiersze anonimowego autora</p>
         </main>
     
 </body>
